# ai-course

./: .gitignore  LICENSE  README.md  pyproject.toml
courses/config/: logger.py  neo4j_credentials.py  open_weather.py
courses/course_1/: README.md  detect_characters_in_text.py  response.py  test_detect_character_in_text.py
courses/course_2/: README.md  data.py  response.py  standardize_characters_in_text.py  test_standardize_characters_in_text.py
courses/course_3/: README.md  demo_reasoning.py  response.py  test_demo_reasoning.py  test_fix_math_problem.py
courses/course_4/: README.md  response.py  weather.py  weather_here.py  weather_tool.py
courses/course_5/: README.md  movies.py  neo4j_tool.py  response.py
